NIFI-12575 Refactor components in asana bundle using current API methods